--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^4.23.2",
+    "@supabase/supabase-js": "^2.45.6",
     "@types/mapbox-gl": "^2.7.13",
     "@types/node": "20.4.9",
     "@types/react": "18.2.20",
