--- a/package.json
+++ b/package.json
@@ -10,20 +10,26 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^4.23.2",
+    "@radix-ui/react-icons": "^1.3.0",
     "@supabase/supabase-js": "^2.45.6",
     "@types/mapbox-gl": "^2.7.13",
     "@types/node": "20.4.9",
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.14",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "eslint-config-next": "^15.0.1",
+    "lucide-react": "^0.454.0",
     "mapbox-gl": "^2.15.0",
     "next": "^15.0.1",
     "postcss": "^8.4.27",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-map-gl": "^7.1.3",
+    "tailwind-merge": "^2.5.4",
     "tailwindcss": "3.3.3",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "5.1.6"
   }
 }
