--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@supabase/supabase-js": "^2.45.6",
     "@types/mapbox-gl": "^2.7.13",
     "@types/node": "20.4.9",
+    "@types/nodemailer": "^6.4.16",
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.14",
@@ -25,6 +26,7 @@
     "lucide-react": "^0.454.0",
     "mapbox-gl": "^2.15.0",
     "next": "^15.0.1",
+    "nodemailer": "^6.9.16",
     "postcss": "^8.4.27",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
