--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
     "eslint-config-next": "^15.0.1",
     "lucide-react": "^0.454.0",
     "mapbox-gl": "^2.15.0",
+    "micro": "^10.0.1",
     "next": "^15.0.1",
     "nodemailer": "^6.9.16",
     "postcss": "^8.4.27",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-map-gl": "^7.1.3",
+    "stripe": "^17.3.1",
     "tailwind-merge": "^2.5.4",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
