--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "next": "^15.0.1",
     "nodemailer": "^6.9.16",
     "postcss": "^8.4.27",
+    "posthog-js": "^1.181.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-map-gl": "^7.1.3",
