--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/nodemailer": "^6.4.16",
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
+    "@vercel/analytics": "^1.3.2",
     "autoprefixer": "10.4.14",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
