--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "lucide-react": "^0.454.0",
     "mapbox-gl": "^2.15.0",
     "micro": "^10.0.1",
+    "nanoid": "^5.0.9",
     "next": "^15.0.1",
     "nodemailer": "^6.9.16",
     "postcss": "^8.4.27",
