--- a/package.json
+++ b/package.json
@@ -23,9 +23,12 @@
     "@vercel/analytics": "^1.3.2",
     "@vercel/speed-insights": "^1.1.0",
     "autoprefixer": "10.4.14",
+    "canvas": "^2.11.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "domino": "^2.1.6",
     "eslint-config-next": "^15.0.1",
+    "fluent-ffmpeg": "^2.1.3",
     "lucide-react": "^0.454.0",
     "mapbox-gl": "^2.15.0",
     "micro": "^10.0.1",
@@ -34,9 +37,11 @@
     "nodemailer": "^6.9.16",
     "postcss": "^8.4.27",
     "posthog-js": "^1.181.0",
+    "puppeteer": "^23.10.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-map-gl": "^7.1.3",
+    "react-pageflip": "^2.0.3",
     "stripe": "^17.3.1",
     "tailwind-merge": "^2.5.4",
     "tailwindcss": "3.3.3",
