--- a/package.json
+++ b/package.json
@@ -26,9 +26,8 @@
     "canvas": "^2.11.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "domino": "^2.1.6",
     "eslint-config-next": "^15.0.1",
-    "fluent-ffmpeg": "^2.1.3",
+    "ffmpeg-static": "^5.2.0",
     "lucide-react": "^0.454.0",
     "mapbox-gl": "^2.15.0",
     "micro": "^10.0.1",
@@ -47,5 +46,8 @@
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.1.6"
+  },
+  "devDependencies": {
+    "@types/fluent-ffmpeg": "^2.1.27"
   }
 }
