--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@types/mapbox-gl": "^2.7.13",
     "@types/node": "20.4.9",
     "@types/nodemailer": "^6.4.16",
-    "@types/react": "18.2.20",
+    "@types/react": "^18.2.20",
     "@types/react-dom": "18.2.7",
     "@vercel/analytics": "^1.3.2",
     "@vercel/speed-insights": "^1.1.0",
@@ -33,6 +33,9 @@
     "nanoid": "^5.0.9",
     "next": "^15.0.1",
     "nodemailer": "^6.9.16",
+    "page-flip": "^2.0.7",
+    "plyr": "^3.7.8",
+    "plyr-react": "^5.3.0",
     "postcss": "^8.4.27",
     "posthog-js": "^1.181.0",
     "puppeteer": "^23.10.1",
@@ -44,9 +47,10 @@
     "tailwind-merge": "^2.5.4",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "5.1.6"
+    "typescript": "^5.1.6"
   },
   "devDependencies": {
-    "@types/fluent-ffmpeg": "^2.1.27"
+    "@types/fluent-ffmpeg": "^2.1.27",
+    "@types/page-flip": "^2.0.3"
   }
 }
