--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@sparticuz/chromium": "^131.0.1",
     "@supabase/supabase-js": "^2.45.6",
     "@types/mapbox-gl": "^2.7.13",
     "@types/node": "20.4.9",
@@ -39,6 +40,7 @@
     "postcss": "^8.4.27",
     "posthog-js": "^1.181.0",
     "puppeteer": "^23.10.1",
+    "puppeteer-core": "^23.10.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-map-gl": "^7.1.3",
