--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^4.23.2",
-    "@ffmpeg/ffmpeg": "^0.11.6",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-icons": "^1.3.0",
@@ -27,6 +26,7 @@
     "autoprefixer": "10.4.14",
     "canvas": "^2.11.2",
     "class-variance-authority": "^0.7.0",
+    "cloudinary": "^2.5.1",
     "clsx": "^2.1.1",
     "eslint-config-next": "^15.0.1",
     "lucide-react": "^0.454.0",
@@ -53,7 +53,6 @@
     "typescript": "^5.1.6"
   },
   "devDependencies": {
-    "@types/fluent-ffmpeg": "^2.1.27",
     "@types/page-flip": "^2.0.3"
   }
 }
