--- a/vercel.json
+++ b/vercel.json
@@ -4,5 +4,6 @@
       "memory": 3008,
       "maxDuration": 300
     }
-  }
+  },
+   "installCommand": "npm install && node api/vercel-recordflipbook/ffmpeg.js"
 }
