--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^4.23.2",
+    "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-icons": "^1.3.0",
@@ -54,6 +55,7 @@
     "typescript": "^5.1.6"
   },
   "devDependencies": {
-    "@types/page-flip": "^2.0.3"
+    "@types/page-flip": "^2.0.3",
+    "@ffmpeg-installer/ffmpeg": "^1.1.0"
   }
 }
