--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "clsx": "^2.1.1",
     "eslint-config-next": "^15.0.1",
     "ffmpeg-static": "^5.2.0",
+    "fluent-ffmpeg": "^2.1.3",
     "lucide-react": "^0.454.0",
     "mapbox-gl": "^2.15.0",
     "micro": "^10.0.1",
@@ -55,7 +56,8 @@
     "typescript": "^5.1.6"
   },
   "devDependencies": {
-    "@types/page-flip": "^2.0.3",
-    "@ffmpeg-installer/ffmpeg": "^1.1.0"
+    "@ffmpeg-installer/ffmpeg": "^1.1.0",
+    "@types/fluent-ffmpeg": "^2.1.27",
+    "@types/page-flip": "^2.0.3"
   }
 }
