--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^4.23.2",
+    "@radix-ui/react-alert-dialog": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-scroll-area": "^1.2.2",
-    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-slot": "^1.1.1",
     "@sparticuz/chromium": "^131.0.1",
     "@supabase/supabase-js": "^2.45.6",
     "@types/mapbox-gl": "^2.7.13",
