feat(config): Enhance production build security and optimization
- Add Terser configuration for advanced code minification
- Disable source maps in production environment
- Enable SWC minification for improved performance
- Optimize chunk splitting and caching strategies
- Implement module concatenation and deterministic IDs
- Remove console statements and debug info in production

Security: Code obfuscation added to protect source code
Performance: Reduced bundle size and improved caching

--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@remotion/lambda": "^4.0.0",
     "@remotion/player": "^4.0.0",
     "@remotion/renderer": "^4.0.0",
-    "@types/page-flip": "^2.0.3"
+    "@types/page-flip": "^2.0.3",
+    "terser-webpack-plugin": "^5.3.11"
   }
 }
