--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "cloudinary": "^2.5.1",
     "clsx": "^2.1.1",
     "eslint-config-next": "^15.0.1",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.454.0",
     "mapbox-gl": "^2.15.0",
     "micro": "^10.0.1",
@@ -61,6 +62,7 @@
     "@remotion/lambda": "^4.0.0",
     "@remotion/player": "^4.0.0",
     "@remotion/renderer": "^4.0.0",
+    "@types/lodash": "^4.17.13",
     "@types/page-flip": "^2.0.3",
     "terser-webpack-plugin": "^5.3.11"
   }
