--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
     "tailwind-merge": "^2.5.4",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "^5.1.6"
+    "typescript": "^5.1.6",
+    "@remotion/player": "^4.0.0"
   },
   "devDependencies": {
     "@types/lodash": "^4.17.13",
