--- a/package.json
+++ b/package.json
@@ -9,54 +9,55 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@clerk/nextjs": "^4.23.2",
-    "@radix-ui/react-alert-dialog": "^1.1.3",
+    "@clerk/nextjs": "^6.9.6",
+    "@radix-ui/react-alert-dialog": "^1.1.4",
     "@radix-ui/react-dialog": "^1.1.2",
-    "@radix-ui/react-dropdown-menu": "^2.1.2",
-    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-dropdown-menu": "^2.1.4",
+    "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-scroll-area": "^1.2.2",
     "@radix-ui/react-slot": "^1.1.1",
+    "@remotion/player": "^4.0.244",
     "@sparticuz/chromium": "^131.0.1",
-    "@supabase/supabase-js": "^2.45.6",
-    "@types/mapbox-gl": "^2.7.13",
+    "@supabase/supabase-js": "^2.47.10",
+    "@types/mapbox-gl": "^2.7.21",
     "@types/node": "20.4.9",
-    "@types/nodemailer": "^6.4.16",
-    "@types/react": "^18.2.20",
+    "@types/nodemailer": "^6.4.17",
+    "@types/react": "^18.3.18",
     "@types/react-dom": "18.2.7",
-    "@vercel/analytics": "^1.3.2",
+    "@vercel/analytics": "^1.4.1",
     "@vercel/speed-insights": "^1.1.0",
     "autoprefixer": "10.4.14",
     "canvas": "^2.11.2",
-    "class-variance-authority": "^0.7.0",
+    "class-variance-authority": "^0.7.1",
     "cloudinary": "^2.5.1",
     "clsx": "^2.1.1",
-    "eslint-config-next": "^15.0.1",
+    "eslint-config-next": "^15.1.3",
     "lodash": "^4.17.21",
     "lucide-react": "^0.454.0",
     "mapbox-gl": "^2.15.0",
     "micro": "^10.0.1",
     "nanoid": "^5.0.9",
-    "next": "^15.0.1",
+    "next": "^15.1.3",
     "nodemailer": "^6.9.16",
     "page-flip": "^2.0.7",
     "plyr": "^3.7.8",
     "plyr-react": "^5.3.0",
-    "postcss": "^8.4.27",
-    "posthog-js": "^1.181.0",
+    "postcss": "^8.4.49",
+    "posthog-js": "^1.203.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-map-gl": "^7.1.3",
+    "react-map-gl": "^7.1.8",
     "react-pageflip": "^2.0.3",
-    "stripe": "^17.3.1",
-    "tailwind-merge": "^2.5.4",
+    "stripe": "^17.5.0",
+    "tailwind-merge": "^2.6.0",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "^5.1.6",
-    "@remotion/player": "^4.0.0"
+    "typescript": "^5.7.2"
   },
   "devDependencies": {
     "@types/lodash": "^4.17.13",
     "@types/page-flip": "^2.0.3",
-    "terser-webpack-plugin": "^5.3.11"
+    "terser-webpack-plugin": "^5.3.11",
+    "wasm-loader": "^1.3.0"
   }
 }
