--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-dom": "^18.3.1",
     "react-map-gl": "^7.1.8",
     "react-pageflip": "^2.0.3",
+    "recharts": "^2.15.0",
     "stripe": "^17.5.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss": "3.3.3",
