--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.4",
     "@radix-ui/react-icons": "^1.3.2",
+    "@radix-ui/react-popover": "^1.1.5",
     "@radix-ui/react-scroll-area": "^1.2.2",
     "@radix-ui/react-slot": "^1.1.1",
     "@remotion/player": "^4.0.244",
@@ -31,6 +32,7 @@
     "class-variance-authority": "^0.7.1",
     "cloudinary": "^2.5.1",
     "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
     "eslint-config-next": "^15.1.3",
     "lodash": "^4.17.21",
     "lucide-react": "^0.454.0",
@@ -46,6 +48,7 @@
     "postcss": "^8.4.49",
     "posthog-js": "^1.203.2",
     "react": "^18.3.1",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-map-gl": "^7.1.8",
     "react-pageflip": "^2.0.3",
