--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-popover": "^1.1.5",
     "@radix-ui/react-scroll-area": "^1.2.2",
     "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-tabs": "^1.1.2",
     "@remotion/player": "^4.0.244",
     "@sparticuz/chromium": "^131.0.1",
     "@supabase/supabase-js": "^2.47.10",
