--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
     "react-map-gl": "^7.1.8",
     "react-pageflip": "^2.0.3",
     "recharts": "^2.15.0",
@@ -60,7 +61,8 @@
     "tailwind-merge": "^2.6.0",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "^5.7.2"
+    "typescript": "^5.7.2",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@types/lodash": "^4.17.13",
